Migrate to CPP REST SDK

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,6 @@
 [submodule "deps/loguru"]
 	path = deps/loguru
 	url = https://github.com/emilk/loguru.git
-[submodule "deps/h2o"]
-	path = deps/h2o
-	url = https://github.com/h2o/h2o.git
-[submodule "deps/json"]
-	path = deps/json
-	url = https://github.com/nlohmann/json.git
-	branch = master
+[submodule "deps/cpprestsdk"]
+	path = deps/cpprestsdk
+	url = https://github.com/Microsoft/cpprestsdk.git
