Add stubs for Boost::Beast

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/cpprestsdk"]
 	path = deps/cpprestsdk
 	url = https://github.com/Microsoft/cpprestsdk.git
+[submodule "deps/json"]
+	path = deps/json
+	url = https://github.com/nlohmann/json.git
