--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Boost REQUIRED filesystem)
+find_package(Boost REQUIRED filesystem system)
 link_directories(${Boost_LIBRARY_DIRS})
 
 add_subdirectory(deps)
