--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,9 @@ add_executable(gliese-scanner
         exception/dsm_exception.hpp
         exception/http_exception.hpp
         http/listener.cpp http/listener.hpp
+        http/router.cpp http/router.hpp
         http/handler/devices.cpp
+		http/handler/handler.hpp
         http/handler/handlers.cpp http/handler/handlers.hpp
         http/handler/scan.cpp
         http/handler/status.cpp
@@ -20,8 +22,8 @@ else()
 endif()
 
 target_compile_definitions(gliese-scanner PUBLIC LOGURU_WITH_STREAMS=1)
-target_include_directories(gliese-scanner PUBLIC ${Boost_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/deps/loguru ${CMAKE_SOURCE_DIR}/deps/h2o/include)
-target_link_libraries(gliese-scanner PRIVATE cpprest
+target_include_directories(gliese-scanner PUBLIC ${Boost_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/deps/loguru)
+target_link_libraries(gliese-scanner PRIVATE nlohmann_json::nlohmann_json
     loguru
     ${ZLIB_LIBRARY}
     ${Boost_SYSTEM_LIBRARY}
