--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -8,3 +8,4 @@ set(JSON_BuildTests OFF CACHE INTERNAL "")
 set(JSON_Install OFF CACHE INTERNAL "")
 
 add_subdirectory(json)
+add_subdirectory(kitsune-ioc)
