Use kitsune::ioc submodule

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,6 @@ target_sources(gliese-scanner PUBLIC
         http/router.cpp http/router.hpp
         http/handler/devices.cpp http/handler/devices.hpp
         http/handler/handler.hpp
-        http/handler/handlers.cpp http/handler/handlers.hpp
         http/handler/scan.cpp http/handler/scan.hpp
         http/handler/status.cpp
         twain/transfer.cpp twain/transfer.hpp
@@ -33,6 +32,7 @@ target_sources(gliese-scanner PUBLIC
 target_compile_definitions(gliese-scanner PUBLIC LOGURU_WITH_STREAMS=1)
 target_include_directories(gliese-scanner PUBLIC ${Boost_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/deps/loguru)
 target_link_libraries(gliese-scanner PRIVATE nlohmann_json::nlohmann_json
+    kitsune::ioc
     loguru
     ${ZLIB_LIBRARY}
     ${Boost_SYSTEM_LIBRARY}
