--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-find_package(Boost 1.71.0 REQUIRED filesystem system)
+find_package(Boost 1.71.0 REQUIRED date_time filesystem system)
 
 add_subdirectory(deps)
 add_subdirectory(src)
