Fix native and memory transfers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.7)
 project(dasa-twain-server)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 if (POLICY CMP0076)
     cmake_policy(SET CMP0076 NEW)
 endif()
@@ -10,6 +12,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(Boost 1.71.0 REQUIRED date_time filesystem system)
+
+if (NOT (MSVC OR MSYS OR MINGW))
+    find_package(FreeImage REQUIRED)
+endif()
 
 add_subdirectory(deps)
 add_subdirectory(src)
