--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 if (MSVC OR MSYS OR MINGW)
-    add_executable(twain-server WIN32 application_windows.cpp application_windows.hpp)
+    add_executable(twain-server WIN32 application_windows.cpp application_windows.hpp
+            twain/native_transfer_windows.cpp)
     target_compile_definitions(twain-server PUBLIC UNICODE=1)
 else()
-    add_executable(twain-server application_linux.cpp application_linux.hpp)
-    target_link_libraries(twain-server PRIVATE pthread)
+    add_executable(twain-server application_linux.cpp application_linux.hpp
+            twain/native_transfer_linux.cpp)
+    target_link_libraries(twain-server PRIVATE pthread ${FREEIMAGE_LIBRARIES})
 endif()
 
 # In OSX, TWAIN library is a framework that must be statically linked
@@ -28,10 +30,10 @@ target_sources(twain-server PUBLIC
         http/handler/status.cpp
         twain/transfer.cpp twain/transfer.hpp
         twain/memory_transfer.cpp twain/memory_transfer.hpp
-        twain/native_transfer.cpp twain/native_transfer.hpp)
+        twain/native_transfer.hpp)
 
 target_compile_definitions(twain-server PUBLIC LOGURU_WITH_STREAMS=1)
-target_include_directories(twain-server PUBLIC ${Boost_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/deps/loguru)
+target_include_directories(twain-server PUBLIC ${Boost_INCLUDE_DIR} ${FREEIMAGE_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/deps/loguru)
 target_link_directories(twain-server PUBLIC ${Boost_LIBRARY_DIR_DEBUG})
 target_link_libraries(twain-server PRIVATE nlohmann_json::nlohmann_json
     kitsune::ioc
