--- a/test/twain-dsm-test/CMakeLists.txt
+++ b/test/twain-dsm-test/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_executable(twain-dsm-test test.cpp)
+add_executable(twain-dsm-test test.cpp ${CMAKE_SOURCE_DIR}/src/twain/dsm.cpp)
+
+target_link_libraries(twain-dsm-test PUBLIC test-base)
 
 add_test(
     NAME
