Create Windows service application
This watcher service should be started automatically when Windows starts

The service will watch the main application for crashes. When any crash happens, it restarts the application.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 find_package(Boost 1.71.0 REQUIRED date_time filesystem system)
 
 if (MSVC OR MSYS OR MINGW)
-  set(APPLICATION_TYPE "Console" CACHE STRING "The generated application type: Console, Window or Service")
+  set(APPLICATION_TYPE "Console" CACHE STRING "The generated application type: Console or Window")
 else()
   find_package(FreeImage REQUIRED)
 endif()
@@ -22,3 +22,6 @@ endif()
 add_subdirectory(deps)
 add_subdirectory(src)
 add_subdirectory(test)
+if (MSVC OR MSYS OR MINGW)
+  add_subdirectory(watcher)
+endif()
